--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
  * @Descripttion: 描述
  * @version: 版本
  * @Author: xiongbin
- * @Date: 2019-11-11 10:21:54
+ * @Date: 2019-11-08 14:54:24
  * @LastEditors: 1490251116@qq.com
- * @LastEditTime: 2019-11-20 16:14:01
+ * @LastEditTime: 2019-11-14 11:10:28
  -->
 <!DOCTYPE html>
 <html lang="zh">
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1509070_wjo5thbr2ia.css">
-    <title>蜜蜂GO后台管理系统</title>
+    <title>蜜蜂GO品牌管理系统</title>
   </head>
   <body>
     <div id="app">
